# autoreport

./: config_poetry.txt  cria.py  pyproject.toml
dados/: cabecalho.tex
relatorio/: cria.py
tests/relatorio/: test_cria.py
