[tool.poetry]
name = "autoreport"
version = "0.1.0"
description = "gerador de relatórios latex"
authors = ["Gustavo Tironi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
